--- a/index.html
+++ b/index.html
@@ -3238,7 +3238,7 @@
         <button class="fun-button" onclick="showChatBotModal()">
             <i>🤖</i>智能机器人
         </button>
-        <button class="fun-button" onclick="showHoroscopeModal()">
+        <!-- <button class="fun-button" onclick="showHoroscopeModal()">
             <i>♈️</i>星座运势
         </button>
         <button class="fun-button" onclick="showProductModal()">
@@ -3255,19 +3255,19 @@
         </button>
         <button class="fun-button" onclick="showMorningNewsModal()">
             <i>🌍</i>60秒读懂世界
-        </button>
+        </button> -->
     </div>
 
-    <!-- 在视频图片区上方添加最近更新区域 -->
+    <!-- 在视频图片区上方添加最近更新区域
     <div class="section-title">
         <h2>最近更新</h2>
     </div>
     <div class="section-divider"></div>
     <div class="recent-updates">
         <div class="update-list" id="recentUpdates">
-            <!-- 更新内容将通过JavaScript动态添加 -->
+         更新内容将通过JavaScript动态添加 
         </div>
-    </div>
+    </div> -->
 
     <!-- 视频图片区 -->
     <div class="section-title">
