--- a/index.html
+++ b/index.html
@@ -3339,13 +3339,13 @@
             </div>
         </div>
 
-         <!-- <div class="image-item" onclick="showPcWallpaperModal()">
+         <div class="image-item" onclick="showPcWallpaperModal()">
             <span class="corner-label">不易放开</span>
             <img src="https://api.yujn.cn/api/mjx.php" alt="买家秀">
             <div class="play-button-container">
                 <button class="play-button">卖家秀</button>
             </div>
-        </div>  -->
+        </div> 
 
         <!-- 在图片容器区域添加腹肌图片卡片 -->
         <div class="image-item">
@@ -3356,14 +3356,14 @@
             </div>
         </div>
 
-        <div class="image-item" onclick="showLegModal()">
+<!--         <div class="image-item" onclick="showLegModal()">
             <span class="corner-label">随机腿控</span>
             <img src="http://api.yujn.cn/api/tui.php?" alt="腿控图片">
             <div class="play-button-container">
                 <button class="play-button">随机腿控</button>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- 搜索结果弹窗 -->
     <div id="searchModal" class="modal">
