--- a/index.html
+++ b/index.html
@@ -3340,7 +3340,7 @@
         </div>
 
          <div class="image-item" onclick="showPcWallpaperModal()">
-            <span class="corner-label">不易放开</span>
+            <span class="corner-label">卖家秀</span>
             <img src="https://api.yujn.cn/api/mjx.php" alt="买家秀">
             <div class="play-button-container">
                 <button class="play-button">卖家秀</button>
@@ -3789,11 +3789,11 @@
     <div id="pcWallpaperModal" class="modal">
         <div class="modal-content subway-modal">
             <span class="close-button" onclick="closePcWallpaperModal()">&times;</span>
-            <div class="modal-title">卖家秀</div>
+            <div class="modal-title">快手美女</div>
             <div class="subway-search-content">
                 <div id="pcWallpaperResult" class="subway-result">
                     <div class="pc-wallpaper-display">
-                        <img id="currentPcWallpaper" src="" alt="卖家秀">
+                        <img id="currentPcWallpaper" src="" alt="快手美女">
                         <div class="pc-wallpaper-controls" style="display: flex; justify-content: center; gap: 15px; margin-top: 20px;">
                             <button onclick="refreshPcWallpaper()" class="refresh-btn">
                                 <i>↻</i>换一张
