--- a/index.html
+++ b/index.html
@@ -3331,13 +3331,13 @@
             </div>
         </div> 
         
-        <div class="image-item" onclick="showPcWallpaperModal()">
+<!--         <div class="image-item" onclick="showPcWallpaperModal()">
             <span class="corner-label">快手美女</span>
             <img src="https://api.yujn.cn/api/ksxjj.php" alt="快手美女">
             <div class="play-button-container">
                 <button class="play-button">快手美女</button>
             </div>
-        </div>
+        </div> -->
 
          <div class="image-item" onclick="showPcWallpaperModal()">
             <span class="corner-label">卖家秀</span>
@@ -3356,14 +3356,14 @@
             </div>
         </div>
 
-<!--         <div class="image-item" onclick="showLegModal()">
+        <div class="image-item" onclick="showLegModal()">
             <span class="corner-label">随机腿控</span>
             <img src="http://api.yujn.cn/api/tui.php?" alt="腿控图片">
             <div class="play-button-container">
                 <button class="play-button">随机腿控</button>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!-- 搜索结果弹窗 -->
     <div id="searchModal" class="modal">
@@ -3789,11 +3789,11 @@
     <div id="pcWallpaperModal" class="modal">
         <div class="modal-content subway-modal">
             <span class="close-button" onclick="closePcWallpaperModal()">&times;</span>
-            <div class="modal-title">快手美女</div>
+            <div class="modal-title">卖家秀</div>
             <div class="subway-search-content">
                 <div id="pcWallpaperResult" class="subway-result">
                     <div class="pc-wallpaper-display">
-                        <img id="currentPcWallpaper" src="" alt="快手美女">
+                        <img id="currentPcWallpaper" src="" alt="卖家秀">
                         <div class="pc-wallpaper-controls" style="display: flex; justify-content: center; gap: 15px; margin-top: 20px;">
                             <button onclick="refreshPcWallpaper()" class="refresh-btn">
                                 <i>↻</i>换一张
