--- a/index.html
+++ b/index.html
@@ -3358,7 +3358,7 @@
 
         <div class="image-item" onclick="showLegModal()">
             <span class="corner-label">随机腿控</span>
-            <img src="http://api.yujn.cn/api/tui.php?" alt="腿控图片">
+            <img src="https://api.zhcnli.cn/api/sjtp/tupian.php?type=bs" alt="腿控图片">
             <div class="play-button-container">
                 <button class="play-button">随机腿控</button>
             </div>
