--- a/index.html
+++ b/index.html
@@ -3179,7 +3179,7 @@
                         <span class="hot-search-item" onclick="searchHotWord(this)">拯救萌宝计划</span>
                         <span class="hot-search-item" onclick="searchHotWord(this)">他从星光中走来</span>
                         <span class="hot-search-item" onclick="searchHotWord(this)">余生有你皆欢喜</span>
-                        <span class="hot-search-item" onclick="searchHotWord(this)">傅少别玩了,夫人被你虐"死"了</span>
+                        <span class="hot-search-item" onclick="searchHotWord(this)">绝命钢琴师</span>
                         <span class="hot-search-item" onclick="searchHotWord(this)">"骗骗"喜欢你</span>
                         <span class="hot-search-item" onclick="searchHotWord(this)">......</span>
                     </div>
