--- a/second.html
+++ b/second.html
@@ -372,7 +372,7 @@
             <div class="slide" style="background-image: url('https://p.sda1.dev/22/202156eed70df1e1c263434707fb3930/v2-eb52cb2b8ce2142183a6474ca8db2cac_r.jpg');"></div>
             <div class="slide" style="background-image: url('https://p.sda1.dev/22/8099335e187f8b2565b98a029c1e1b11/v2-316d0685ef680095ba03a7e0da7e4c53_r.jpg');"></div>
         </div>
-        <button class="back-button" onclick="window.location.href='wy.html'">返回主页</button>
+        <button class="back-button" onclick="window.location.href='index.html'">返回主页</button>
         <h1>视频分类</h1>
     </div>
     
