--- a/second.html
+++ b/second.html
@@ -378,7 +378,7 @@
     
     <div class="image-container">
         <!-- 从主页面复制的所有卡片 -->
-        <div class="image-item" onclick="toPlaye('http://api.yujn.cn/api/zzxjj.php?type=video')">
+        <div class="image-item" onclick="toPlaye('https://api.yujn.cn/api/zzxjj.php?type=video')">
             <img src="https://p.sda1.dev/22/1d35228028923127eaa40aca89c0b41d/_2_泡泡甜汤_来自小红书网页版 _3_.jpg" alt="Image 1">
             <div class="play-button-container">
                 <button class="play-button">随机小姐姐</button>
