--- a/index.html
+++ b/index.html
@@ -3277,7 +3277,7 @@
     <div class="image-container">
         <div class="image-item" onclick="window.location.href='second.html'">
             <span class="corner-label">进入视频分类</span>
-            <img src="https://p.sda1.dev/22/1d35228028923127eaa40aca89c0b41d/_2_泡泡甜汤_来自小红书网页版 _3_.jpg" alt="进入视频分类">
+            <img src="hhttps://pic.netbian.com/uploads/allimg/250403/173542-1743672942ff2f.jpg" alt="进入视频分类">
             <div class="play-button-container">
                 <button class="play-button">进入视频分类</button>
             </div>
