--- a/index.html
+++ b/index.html
@@ -3317,7 +3317,7 @@
 
         <div class="image-item" onclick="showAnimeModal()">
             <span class="corner-label">随机养眼图</span>
-            <img src="https://api.yujn.cn/api/yangyan.php" alt="小姐姐">
+            <img src="https://api.zhcnli.cn/api/sjtp/tupian.php?type=mn" alt="小姐姐">
             <div class="play-button-container">
                 <button class="play-button">随机养眼图</button>
             </div>
