Update and rename closeGoldPriceModal to index.html

--- a/index.html
+++ b/index.html
@@ -3331,7 +3331,7 @@
             </div>
         </div> 
         
-        <div class="image-item" onclick="showPcWallpaperModal()">
+        <div class="image-item" onclick="showFujiModal()">
             <span class="corner-label">快手美女</span>
             <img src="https://api.yujn.cn/api/ksxjj.php" alt="快手美女">
             <div class="play-button-container">
